base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      tolerations:
        - key: "karpenter.sh/workload"
          operator: "Equal"
          value: "application"
          effect: "NoSchedule"

      nodeSelector:
        workload: application

      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
